--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: CI Workflow Advance (Amazon Sales + DagsHub + Docker)
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 env:
   DAGSHUB_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
   DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
-  MLFLOW_TRACKING_URI: "https://dagshub.com/${{ secrets.DAGSHUB_USERNAME }}/amazon-sales-workflow.mlflow"
+  MLFLOW_TRACKING_URI: "https://dagshub.com/dhysyhtri/amazon-sales-mlflow.mlflow"
   MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
   MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
 
@@ -27,26 +27,19 @@ jobs:
       with:
         python-version: "3.12.7"
 
-    # 3. Check environment
-    - name: Check Environment
-      run: |
-        python --version
-        pip --version
-        ls -R
-
-    # 4. Install dependencies
+    # 3. Install Dependencies
     - name: Install Dependencies
       run: |
         pip install --upgrade pip
         pip install mlflow==2.19.0 dagshub pandas numpy scikit-learn joblib cloudpickle
 
-    # 5. Run MLflow Project (training + log ke DagsHub)
+    # 4. Run MLflow Project (Training + Log ke DagsHub)
     - name: Run MLflow Project
       run: |
         cd MLProject
         mlflow run . --env-manager=local --experiment-name "amazon-sales-ci"
 
-    # 6. Get latest MLflow run_id
+    # 5. Ambil latest run_id
     - name: Get latest MLflow run_id
       id: get_run
       run: |
@@ -54,14 +47,14 @@ jobs:
         echo "run_id=$run_id" >> $GITHUB_OUTPUT
         echo "Latest Run ID: $run_id"
 
-    # 7. Upload MLflow Artifacts to GitHub (opsional)
+    # 6. Upload MLflow artifacts (opsional)
     - name: Upload MLflow Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: mlflow-artifacts
         path: MLProject/mlruns/
 
-    # 8. Build Docker Image dari MLflow Model
+    # 7. Build Docker Image dari MLflow Model
     - name: Build Docker Image
       run: |
         cd MLProject
@@ -70,14 +63,14 @@ jobs:
           -n "${{ secrets.DOCKERHUB_USERNAME }}/amazon-mlflow-model:latest" \
           --enable-mlserver
 
-    # 9. Docker Login
+    # 8. Docker Login
     - name: Docker Login
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # 10. Push Docker Image
+    # 9. Push Docker Image
     - name: Push Docker Image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/amazon-mlflow-model:latest
